--- a/usuaris/templates/usuaris_perfil.html
+++ b/usuaris/templates/usuaris_perfil.html
@@ -4,49 +4,85 @@
 {% block body %}
 
 
-<div class="master" style>
-   <section class="main user-profile">
-    <header>
+<div class="master" style="width: 100%; display: grid; place-content: center;">
+    <section class="main user-profile">
         <header>
-            <h1>
-                <span>Configuració d'usuari</span>
-            </h1>
+            <header>
+                <h1 style="color: #1e96b1;">Configuració d'usuari</h1>
+            </header>
         </header>
-    </header>
-    <form method="post" enctype="multipart/form-data" class="ng-pristine ng-valid ng-valid-required ng-valid-maxlenght ng-valid email">
-        {% csrf_token %}
-        <!--Canviar avatar-->
-        <div class="project-details-image">
-            <fieldset class="image-container">
-                <img src="{{ usuari.avatar.url }}" style="width: 180px; height: 180px;">
-                <h2>{{ usuari.user }}</h2>
-            </fieldset>
-            <input type="file" name="avatar">
-            <button type="submit" name="guardar_avatar" class="btn-small button-full js-change-avatar">
-                <i aria-hidden="true"></i>
-                Canviar avatar
-            </button>
-            <button type="submit" name="guardar_avatar_defecte" class="btn-small button-full js-change-avatar">
-                <i aria-hidden="true"></i>
-                AVATAR PER DEFECTE
-            </button>
-        </div>
-        <!--Info usuari i canviar bio-->
-        <div class="project-details-form-data"> 
-            <fieldset>
-                <!-- ToDo: Posar maco i afegir els camps que calguin, poso username x provar :) -->
-                <input name="username" value="{{ usuari.user.username }}">
-                <br><br>
-                <textarea name="bio" id="bio" class="ng-pristine ng-valid ng-not-empty ng-valid-maxlenght ng-touched" placeholder="Digues alguna cosa sobre tu" style="width: 500px; height: 227px;">{% if usuari.bio %}{{ usuari.bio }}{% endif %}</textarea>
-            </fieldset>
-            <fieldset class="submit">
-                <button name="guardar_info" variant="primary" type="submit" title="Save" class="btn-small" style="margin-left: 400px;">
-                    Guardar
+        <form method="post" enctype="multipart/form-data" class="ng-pristine ng-valid ng-valid-required ng-valid-maxlength ng-valid-email">
+            {% csrf_token %}
+            <!--Canviar avatar-->
+            <div class="project-details-image">
+                <fieldset class="image-container">
+                    <img src="{{ usuari.avatar.url }}" style="width: 180px; height: 180px;">
+                </fieldset>
+                <div>
+                    <label for="files" class="btn"><i class="fa fa-plus" aria-hidden="true"></i></label>
+                    <input id="files" style="visibility:hidden;" type="file" value="+" name="avatar">
+                </div>
+                <button type="submit" variant="secondary" title="Guardar avatar" name="guardar_avatar" class="btn-small button-full js-change-avatar">
+                    <i aria-hidden="true"></i>
+                    Canviar foto
                 </button>
-            </fieldset>
-        </div>
-    </form>
+                <button type="submit" name="guardar_avatar_defecte" class="botonMenu">
+                    <p style="color: #1e96b1;"> &nbsp &nbsp Avatar per defecte</p>
+                </button>
+            </div>  
+            <!--Info usuari i canviar bio-->
+            <div class="project-details-form-data"> 
+                <fieldset>
+                    <label for="username">Username</label>
+                    <input type="text" name="username" value="{{ usuari.user.username }}">
+                </fieldset>
+                <fieldset>
+                    <label for="email">Email</label>
+                    <input type="text" name="username" value="{{ usuari.user.email }}">
+                </fieldset>
+                <fieldset>
+                    <label for="first_name">Nom</label>
+                    <input type="text" name="username" value="{{ usuari.user.first_name }}">
+                </fieldset>
+                <fieldset>
+                    <label for="bio">Bio</label>
+                    <textarea name="bio" id="bio" class="ng-pristine ng-valid ng-not-empty ng-valid-maxlenght ng-touched" placeholder="Digues alguna cosa sobre tu" style="width: 500px; height: 227px;">{% if usuari.bio %}{{ usuari.bio }}{% endif %}</textarea>
+                </fieldset>
+                <fieldset class="submit">
+                    <button name="guardar_info" variant="primary" type="submit" title="Save" class="btn-small" style="margin-left: 400px;">
+                        Guardar
+                    </button>
+                </fieldset>
+            </div>
+        </form>
    </section> 
 </div>
 
+<style>
+    .botonMenu {
+      background-color: transparent;
+      border: none;
+    }
+    .custom-file-upload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
+</style>
+<script>
+var addAttachment = document.getElementById('addAttachment');
+    var afegirAttachment = document.getElementById('afegirAttachment');
+    var inputFile = document.getElementById('inputFile');
+
+    addAttachment.addEventListener('click', function() {
+        event.preventDefault();
+        inputFile.click();
+    })
+    inputFile.addEventListener('change', function() {
+        afegirAttachment.click();
+    })
+</script>
+
 {% endblock %}
+
