--- a/usuaris/templates/usuaris_info.html
+++ b/usuaris/templates/usuaris_info.html
@@ -37,14 +37,14 @@
                         <tr>
                             <td>
                                 <th>
-                                    <a href="/usuaris/perfil">
+                                    <a href="/usuaris/1/?mostrar=timeline">
                                         <h1><i class="fa fa-align-justify"  aria-hidden="true" ></i> &nbsp Timeline &nbsp </h1>
                                     </a>
                                 </th>
                             </td>
                             <td>
                                 <th>
-                                    <a href="/usuaris/perfil">
+                                    <a href="/usuaris/1/?mostrar=watched">
                                         <h1><i class="fa fa-eye" aria-hidden="true"></i> Watched</h1>
                                     </a>
                                 </th>
@@ -54,31 +54,37 @@
                 </div>
                 <p style="color:darkgrey" >__________________________________________________________________________________________</p>
                 <!--Hacer bucle recorrriendo-->
-                <div class="issue-page"style="width: 100%; ">
-                    <table class="issues-table" style="width: 100%;border-collapse:separate; border-spacing: 0 10px;" >
-                        {% for log in logs %}
-                            <tr class="row table-main">
-                                <!--Ojo hardcoded-->
-                                <p><img src="{{ usuari.avatar.url }}" style="width: 32px; height: 32px;"><a href="{% url 'usuari' 1 %}">{{log.usuari.user}}</a>
-                                {% if log.tipus == "CREAR" %}
-                                     ha creat l'
-                                {% elif log.tipus == "ADD_ATT" %}
-                                     ha afegit el fitxer {{log.valor_nou}} al
-                                {% elif log.tipus == "DEL_ATT" %}
-                                     ha esborrat el fitxer {{log.valor_antic}} al
-                                {% elif log.tipus == "ADD_TAG" %}
-                                     ha afegit el tag {{log.valor_nou}} al
-                                {% elif log.tipus == "DEL_TAG" %}
-                                     ha esborrat el tag {{log.valor_antic}} al
-                                {% else %}
-                                     ha canviat l'atribut {{log.tipus}}  de {{log.valor_previ}} a {{log.valor_nou}} del
-                                {%endif%}
-                                issue <a href="{% url 'editar_issue' log.issue.id %}">#{{log.issue.id}} {{log.issue.subject}}</a></p>
-                                <p style="color:darkgrey">{{log.data}}</p>
-                                <p style="color:darkgrey">__________________________________________________________________________________________</p>
-                            </tr> 
-                        {% endfor %}
-                    </table>
+                {% if "?mostrar=timeline" in request.get_full_path %}
+                <section class ="timeline">
+                    <div class="issue-page"style="width: 100%; ">
+                        <table class="issues-table" style="width: 100%;border-collapse:separate; border-spacing: 0 10px;" >
+                            {% for log in logs %}
+                                <tr class="row table-main">
+                                    <!--Ojo hardcoded-->
+                                    <p><img src="{{ usuari.avatar.url }}" style="width: 32px; height: 32px;"><a href="{% url 'usuari' 1 %}"> {{log.usuari.user}}</a>
+                                    {% if log.tipus == "CREAR" %}
+                                        ha creat l'
+                                    {% elif log.tipus == "ADD_ATT" %}
+                                        ha afegit el fitxer {{log.valor_nou}} al
+                                    {% elif log.tipus == "DEL_ATT" %}
+                                        ha esborrat el fitxer {{log.valor_antic}} al
+                                    {% elif log.tipus == "ADD_TAG" %}
+                                        ha afegit el tag {{log.valor_nou}} al
+                                    {% elif log.tipus == "DEL_TAG" %}
+                                        ha esborrat el tag {{log.valor_antic}} al
+                                    {% else %}
+                                        ha canviat l'atribut {{log.tipus}}  de {{log.valor_previ}} a {{log.valor_nou}} del
+                                    {%endif%}
+                                    issue <a href="{% url 'editar_issue' log.issue.id %}">#{{log.issue.id}} {{log.issue.subject}}</a></p>
+                                    <p style="color:darkgrey">{{log.data}}</p>
+                                    <p style="color:darkgrey">__________________________________________________________________________________________</p>
+                                </tr> 
+                            {% endfor %}
+                        </table>
+                    </div>
+                </section>
+                {%else%}  
+                <section class="watched">
                     <table class="issues-table" style="width: 100%;border-collapse:separate; border-spacing: 0 10px;" >
                         {% for observat in usuari.observats.all %}
                             <tr >
@@ -90,7 +96,8 @@
                             </tr> 
                         {% endfor %}
                     </table>
-                </div>
+                </section>
+                {%endif%}
             </div>
         </div>
         <div>
