--- a/issues/templates/issue_form.html
+++ b/issues/templates/issue_form.html
@@ -47,7 +47,7 @@
                                 
                             </div>
                             <!-- Tags -->
-                            <textarea name="descripcio" rows="7" class="description ng-pristine ng-untouched ng-valid ng-empty">Description</textarea>
+                            <textarea name="descripcio" rows="7" placeholder="Description" class="description ng-pristine ng-untouched ng-valid ng-empty"></textarea>
                             <!-- attachments -->
                             <section style="margin-top: 10px;" class="attachments attachments-full">
                                 <!-- attachment header-->
