--- a/usuaris/templates/usuaris_info.html
+++ b/usuaris/templates/usuaris_info.html
@@ -26,7 +26,7 @@
             </div>
             <div class="profile-quote">
                 <span>
-                    {{usuari.bio}}
+                    {% if usuari.bio %}{{usuari.bio}}{% endif %}
                 </span>
             </div>
         </section>
@@ -37,14 +37,14 @@
                         <tr>
                             <td>
                                 <th>
-                                    <a href="/usuaris/1/?mostrar=timeline">
+                                    <a href="{% url 'usuari' usuari.user.id %}?mostrar=timeline">
                                         <h1><i class="fa fa-align-justify"  aria-hidden="true" ></i> &nbsp Timeline &nbsp </h1>
                                     </a>
                                 </th>
                             </td>
                             <td>
                                 <th>
-                                    <a href="/usuaris/1/?mostrar=watched">
+                                    <a href="{% url 'usuari' usuari.user.id %}?mostrar=watched">
                                         <h1><i class="fa fa-eye" aria-hidden="true"></i> Watched</h1>
                                     </a>
                                 </th>
@@ -102,7 +102,7 @@
         </div>
         <div>
             <button class="btn-big edit-profile" style="height:50px;">
-                <a href="/usuaris/perfil">
+                <a href="{% url 'perfil' %}">
                     <span>
                         Editar bio
                     </span>
